View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033544 | Open CASCADE | OCCT:Foundation Classes | public | 2023-12-06 13:40 | 2024-07-18 21:26 |
Reporter | dpasukhi | Assigned To | dpasukhi | ||
Priority | normal | Severity | major | ||
Status | verified | Resolution | fixed | ||
Target Version | 7.8.0 | ||||
Summary | 0033544: Foundation Classes - Fixing compiler problems [HotFix] | ||||
Description | CR0-780 have some problem with specific compilers. Need to fix them and move forward CR0-780 and V7_8_0 tag | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33544 has been created by dpasukhi. SHA-1: a7718dfeb1ad5be3797d0c8d8a5ed22a9a0d501c Detailed log of new commits: Author: dpasukhi Date: Wed Dec 6 10:42:54 2023 +0000 0033544: Foundation Classes - Fixing compiler problems [HotFix] Fixed problem with Clang-16 Fixed problem with SWIG-4 |
|
Branch CR33544_1 has been created by dpasukhi. SHA-1: c66d7464e85223acc08d78df580d0c4f24941a25 Detailed log of new commits: Author: dpasukhi Date: Wed Dec 6 10:42:54 2023 +0000 0033544: Foundation Classes - Fixing compiler problems [HotFix] Fixed problem with Clang-16 Fixed problem with SWIG-4 |
|
Branch CR33544 has been updated forcibly by dpasukhi. SHA-1: c66d7464e85223acc08d78df580d0c4f24941a25 |
|
Branch CR33544_1 has been updated forcibly by dpasukhi. SHA-1: ffd7a3aa4f0a62b217a69c549a41bee8ddad9783 |
|
Integrated into CR0-780 |
|
Branch CR33544_1 has been deleted by vglukhik. SHA-1: ffd7a3aa4f0a62b217a69c549a41bee8ddad9783 |
|
Branch CR33544 has been deleted by dpasukhi. SHA-1: c66d7464e85223acc08d78df580d0c4f24941a25 |
occt: master ffd7a3aa 2023-12-06 10:42:54 Details Diff |
0033544: Foundation Classes - Fixing compiler problems [HotFix] Fixed problem with Clang-16 Fixed problem with SWIG-4 Fixed genproj procedure |
Affected Issues 0033544 |
|
mod - adm/UDLIST | Diff File | ||
mod - src/Message/Message_AttributeMeter.cxx | Diff File | ||
mod - src/NCollection/NCollection_Array1.hxx | Diff File | ||
mod - src/NCollection/NCollection_DynamicArray.hxx | Diff File | ||
mod - src/NCollection/NCollection_Iterator.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2023-12-06 13:40 | dpasukhi | New Issue | |
2023-12-06 13:40 | dpasukhi | Assigned To | => akaftasev |
2023-12-06 13:43 | git | Note Added: 0114691 | |
2023-12-06 13:45 | dpasukhi | Assigned To | akaftasev => dpasukhi |
2023-12-06 13:46 | dpasukhi | Description Updated | |
2023-12-06 14:39 | git | Note Added: 0114692 | |
2023-12-06 14:57 | git | Note Added: 0114693 | |
2023-12-06 16:00 | git | Note Added: 0114694 | |
2023-12-12 15:28 | dpasukhi | Status | new => resolved |
2023-12-12 15:28 | dpasukhi | Assigned To | dpasukhi => bugmaster |
2023-12-12 15:28 | dpasukhi | Status | resolved => reviewed |
2023-12-12 15:28 | dpasukhi | Note Added: 0114717 | |
2023-12-15 17:16 | dpasukhi | Changeset attached | => occt master ffd7a3aa |
2023-12-15 17:16 | dpasukhi | Assigned To | bugmaster => dpasukhi |
2023-12-15 17:16 | dpasukhi | Status | reviewed => verified |
2023-12-15 17:16 | dpasukhi | Resolution | open => fixed |
2023-12-18 18:40 | git | Note Added: 0114814 | |
2024-07-18 21:26 | git | Note Added: 0116255 |