0033544: Foundation Classes - Fixing compiler problems [HotFix]

Fixed problem with Clang-16
Fixed problem with SWIG-4
Fixed genproj procedure